flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  annotations:
    argocd-image-updater.argoproj.io/image-list: flask=dkbhowmik0/flask-k8s-devops
    argocd-image-updater.argoproj.io/flask.update-strategy: newest-build
    argocd-image-updater.argoproj.io/flask.allow-tags: regexp:^[a-f0-9]{7}$
    argocd-image-updater.argoproj.io/write-back-method: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: dkbhowmik0/flask-k8s-devops:2a6e5e0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
